--- a/src/styles/CardItem.module.css
+++ b/src/styles/CardItem.module.css
@@ -16,7 +16,8 @@
 
 .item .info .thumbnail {
   width: 100%;
-  padding-top: 75%;
+  /* padding-top: 75%; */
+  aspect-ratio: 4/3;
   border-radius: 8px 8px 0 0;
   background: url(''), lightgray 50% / cover no-repeat;
   margin: 0;
@@ -170,6 +171,7 @@
   aspect-ratio: 1 / 1;
   padding-top: unset;
   background-color: transparent;
+  /* border-radius: 7px 7px 0 0; */
   overflow: hidden;
 }
 
@@ -189,7 +191,6 @@
   display: block;
   width: calc(100% + 30px);
   height: 100%;
-  /* background: linear-gradient(180deg, #fff 0%, rgba(0, 0, 0, 0) 50%, #fff 100%), url('../assets/thumbnail1.jpg'); */
   margin: 0 -15px;
   overflow: hidden;
   z-index: -1;
@@ -203,6 +204,12 @@
   height: 100%;
   content: url('../assets/thumbnail1.jpg');
   filter: brightness(90%);
+  -webkit-mask-image: linear-gradient(180deg, transparent 0%, #000 50%, transparent 100%);
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  mask-image: linear-gradient(180deg, transparent 0%, #000 50%, transparent 100%);
+  mask-repeat: no-repeat;
+  mask-size: 100% 100%;
 }
 
 .item.e .title__wrap,
@@ -211,5 +218,5 @@
 }
 
 .item.e .more {
-  border-radius: 0 0 7px 7px;
+  border-radius: 0 0 8px 8px;
 }
