--- a/src/styles/CardEditor.module.css
+++ b/src/styles/CardEditor.module.css
@@ -4,8 +4,8 @@
   flex-direction: column;
   align-items: center;
   gap: 24px;
-  padding: 36px 0px;
   background: linear-gradient(180deg, #c9dae2 0%, #8c9fa8 100%);
+  padding: 36px 0px;
   z-index: 1;
 }
 
@@ -17,23 +17,23 @@
   line-height: 1;
 }
 
-.title__wrap .title,
-.title__wrap .subtitle {
-  color: #000;
+.title__wrap h1,
+.title__wrap h2 {
+  color: var(--color-black);
   text-align: center;
-  font-style: normal;
   margin: 0;
 }
 
-.title {
+.title__wrap h1 {
   font-family: 'Oswald', sans-serif;
   font-size: 34px;
   font-weight: 700;
   letter-spacing: -0.68px;
+  line-height: 1;
   text-transform: uppercase;
 }
 
-.subtitle {
+.title__wrap h2 {
   font-family: 'Pretendard', sans-serif;
   font-size: 14px;
   font-weight: 600;
