--- a/src/styles/CardItem.module.css
+++ b/src/styles/CardItem.module.css
@@ -4,27 +4,22 @@
   flex-direction: column;
   flex-shrink: 0;
   width: 100%;
-  background-color: #fff;
+  background-color: var(--color-white);
   border-radius: 8px;
-  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 8px 0px var(--border-color);
   cursor: pointer;
 }
 
 .item .info {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid var(--border-color);
 }
 
 .item .info .thumbnail {
   width: 100%;
-  /* padding-top: 75%; */
   aspect-ratio: 4/3;
+  background-color: var(--color-light-gray);
   border-radius: 8px 8px 0 0;
-  background: url(''), lightgray 50% / cover no-repeat;
   margin: 0;
-}
-
-.item .info .background {
-  display: none;
 }
 
 .item .info .title__wrap {
@@ -53,17 +48,15 @@
 }
 
 .item .info .title__wrap .cp .cp__name {
-  color: #000;
+  color: var(--color-black);
   font-size: 12px;
-  font-style: normal;
   font-weight: 600;
   line-height: 1;
 }
 
 .item .info .title__wrap .title {
-  color: #000;
+  color: var(--color-black);
   font-size: 20px;
-  font-style: normal;
   font-weight: 800;
   line-height: normal;
 }
@@ -72,9 +65,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--color-dark-gray);
   font-size: 12px;
-  font-style: normal;
   font-weight: 500;
   line-height: 1;
   padding: 8px 14px;
@@ -137,7 +129,6 @@
 
 .item.s .info .thumbnail {
   aspect-ratio: 1 / 1;
-  padding-top: unset;
   border-radius: 4px;
 }
 
@@ -151,14 +142,19 @@
 
 /* editor */
 .item.e {
+  position: relative;
   width: calc(100% - 30px);
-  border: 1px solid rgba(255, 255, 255, 0.4);
-  background-color: transparent;
+  background-color: #e2ebf4;
 }
 
-.item.e .info {
-  /* border-bottom: 1px solid rgba(255, 255, 255, 0.7); */
-  border-bottom: 1px solid #cfcfcf;
+.item.e::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  border: 1.5px solid rgba(255, 255, 255, 0.4);
 }
 
 .item.e .img__wrap {
@@ -169,9 +165,6 @@
 .item.e .info .thumbnail {
   position: relative;
   aspect-ratio: 1 / 1;
-  padding-top: unset;
-  background-color: transparent;
-  /* border-radius: 7px 7px 0 0; */
   overflow: hidden;
 }
 
@@ -203,20 +196,11 @@
   transform: translate(-50%, -50%);
   height: 100%;
   content: url('../assets/thumbnail1.jpg');
-  filter: brightness(90%);
-  -webkit-mask-image: linear-gradient(180deg, transparent 0%, #000 50%, transparent 100%);
+  -webkit-mask-image: linear-gradient(180deg, transparent 0%, var(--color-black) 50%, transparent 100%);
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-size: 100% 100%;
-  mask-image: linear-gradient(180deg, transparent 0%, #000 50%, transparent 100%);
+  mask-image: linear-gradient(180deg, transparent 0%, var(--color-black) 50%, transparent 100%);
   mask-repeat: no-repeat;
   mask-size: 100% 100%;
-}
-
-.item.e .title__wrap,
-.item.e .more {
-  background-color: #e2ebf4;
-}
-
-.item.e .more {
-  border-radius: 0 0 8px 8px;
+  filter: brightness(90%);
 }
