--- a/src/styles/CategoryItem.module.css
+++ b/src/styles/CategoryItem.module.css
@@ -1,21 +1,21 @@
 .item {
-  display: flex;
   flex: 0 0 auto;
+  display: flex;
   justify-content: flex-start;
   align-items: center;
   padding: 12px;
   gap: 14px;
+  background-color: var(--background-color);
   border-radius: 8px;
-  background-color: #faf9fe;
   cursor: pointer;
 }
 
 .item:active {
-  background-color: #000;
+  background-color: var(--color-black);
 }
 
 .item:active p {
-  color: #fff;
+  color: var(--color-white);
 }
 
 .item:active .icon img {
@@ -24,7 +24,6 @@
 
 .item p {
   font-size: 12px;
-  font-style: normal;
   font-weight: 700;
 }
 
