--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -2,7 +2,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid var(--border-color);
   padding: 24px 0 15px 0;
   margin: 0 15px;
 }
@@ -15,11 +15,10 @@ header .logo {
 
 header .logo h1,
 header .logo h2 {
+  color: var(--color-black);
   font-size: 24px;
-  font-style: normal;
   font-weight: 900;
   line-height: 1;
-  color: #000;
   margin: 0;
 }
 
@@ -28,7 +27,7 @@ header .logo h1 {
 }
 
 header .logo h2 {
-  color: #8a898e;
+  color: var(--color-dark-gray);
 }
 
 header .menu {
