--- a/src/styles/cardList.module.css
+++ b/src/styles/cardList.module.css
@@ -2,20 +2,46 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  background: linear-gradient(180deg, #fff 0%, #faf9fe 100%);
+  background: linear-gradient(180deg, var(--color-white) 0%, var(--background-color) 100%);
   /* padding: 36px 15px 25px 15px; */
   padding: 36px 15px;
+}
+
+.title__wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  align-self: stretch;
 }
 
 .title {
   font-family: 'Oswald', sans-serif;
   font-size: 28px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 1;
+  line-height: 0.9;
   letter-spacing: -0.56px;
   text-transform: uppercase;
   margin: 0;
+}
+
+.btn__more {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 4px;
+  background-color: transparent;
+  border: none;
+  padding: 8px;
+  margin: 0 -8px -8px 0;
+  cursor: pointer;
+}
+
+.btn__more p {
+  color: var(--color-black);
+  text-align: right;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 0.9;
 }
 
 .list {
