feat: router 세팅

--- a/src/styles/common/common.css
+++ b/src/styles/common/common.css
@@ -19,6 +19,14 @@ html {
   box-sizing: border-box;
 }
 
+body {
+  position: relative;
+  width: 100%;
+  min-width: 280px;
+  max-width: 540px;
+  margin: 0 auto;
+}
+
 p {
   margin: 0;
 }
