--- a/src/styles/CategoryList.module.css
+++ b/src/styles/CategoryList.module.css
@@ -1,6 +1,6 @@
 .list {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 8px;
   list-style: none;
   text-decoration: none;
