--- a/src/styles/CardEditor.module.css
+++ b/src/styles/CardEditor.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   gap: 24px;
   background: linear-gradient(180deg, #c9dae2 0%, #8c9fa8 100%);
-  padding: 36px 0px;
+  padding: 36px 0;
   z-index: 1;
 }
 
@@ -34,7 +34,83 @@
 }
 
 .title__wrap h2 {
-  font-family: 'Pretendard', sans-serif;
   font-size: 14px;
   font-weight: 600;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  width: calc(100% - 30px);
+  background-color: #e2ebf4;
+  border-radius: 8px;
+  box-shadow: 0px 2px 8px 0px var(--border-color);
+  cursor: pointer;
+}
+
+.card::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  border: 1.5px solid rgba(255, 255, 255, 0.4);
+}
+
+.card__img {
+  position: relative;
+  width: 100%;
+}
+
+.thumbnail {
+  position: relative;
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  background-color: var(--color-light-gray);
+  border-radius: 8px 8px 0 0;
+  margin: 0;
+  overflow: hidden;
+}
+
+.thumbnail img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 100%;
+  object-fit: contain;
+  content: url('../assets/thumbnail1.jpg');
+  background-color: var(--color-light-gray);
+  margin: 0;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: calc(100% + 30px);
+  height: 100%;
+  margin: 0 -15px;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.background img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 100%;
+  content: url('../assets/thumbnail1.jpg');
+  -webkit-mask-image: linear-gradient(180deg, transparent 0%, var(--color-black) 50%, transparent 100%);
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  mask-image: linear-gradient(180deg, transparent 0%, var(--color-black) 50%, transparent 100%);
+  mask-repeat: no-repeat;
+  mask-size: 100% 100%;
+  filter: brightness(90%);
 }
