--- a/src/styles/Home.modue.css
+++ b/src/styles/Home.modue.css
@@ -1,3 +1,5 @@
+@import url('./common/common.css');
+
 .wrap {
   display: flex;
   flex-direction: column;
@@ -48,4 +50,8 @@
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
+  list-style: none;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
 }
