--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -13,8 +13,15 @@
   width: 100%;
   aspect-ratio: 4/3;
   background-color: var(--color-light-gray);
-  border-radius: 8px 8px 0 0;
   margin: 0;
+}
+
+.thumbnail img {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px 8px 0 0;
 }
 
 .card__title {
@@ -46,10 +53,16 @@
 }
 
 .title {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  white-space: normal;
   color: var(--color-black);
   font-size: 20px;
   font-weight: 800;
   line-height: normal;
+  overflow: hidden;
 }
 
 .card__more {
