--- a/src/styles/CardS.module.css
+++ b/src/styles/CardS.module.css
@@ -21,6 +21,13 @@
   width: 36%;
   aspect-ratio: 1 / 1;
   background-color: var(--color-light-gray);
-  border-radius: 4px;
   margin: 0;
+}
+
+.thumbnail img {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
 }
