--- a/src/styles/Category.module.css
+++ b/src/styles/Category.module.css
@@ -1,3 +1,11 @@
+nav {
+  position: sticky;
+  top: 0;
+  background: rgba(255, 255, 255, 0.85);
+  backdrop-filter: blur(25px);
+  z-index: 10;
+}
+
 .list {
   display: flex;
   align-items: center;
@@ -15,11 +23,7 @@
 
 .item {
   flex: 0 0 auto;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
   padding: 12px;
-  gap: 14px;
   background-color: var(--background-color);
   border-radius: 8px;
   cursor: pointer;
@@ -33,24 +37,27 @@
   color: var(--color-white);
 }
 
-.item:active .icon img {
+.item:active img {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(29deg) brightness(102%) contrast(105%);
 }
 
+.item a {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 14px;
+}
+
 .item p {
+  color: var(--color-black);
   font-size: 12px;
   font-weight: 700;
 }
 
-.item .icon {
+.item img {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 16px;
   height: 16px;
-}
-
-.item .icon img {
-  height: 100%;
   object-fit: contain;
 }
