--- a/src/styles/common/common.css
+++ b/src/styles/common/common.css
@@ -1,9 +1,6 @@
 @import url('./normalize.css');
 @import url('./colors.css');
-
-/* font */
-@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald:wght@400;700&display=swap');
+@import url('./font.css');
 
 * {
   font-family: 'Pretendard', sans-serif;
@@ -27,6 +24,17 @@ body {
   margin: 0 auto;
 }
 
+a {
+  text-decoration: none;
+}
+
 p {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  text-decoration: none;
+  padding: 0;
   margin: 0;
 }
