--- a/src/styles/CardEditor.module.css
+++ b/src/styles/CardEditor.module.css
@@ -1,52 +1,11 @@
-.wrap {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 24px;
-  background: linear-gradient(180deg, #c9dae2 0%, #8c9fa8 100%);
-  padding: 36px 0;
-  z-index: 1;
-}
-
-.title__wrap {
-  position: sticky;
-  top: 92px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 12px;
-  line-height: 1;
-}
-
-.title__wrap h1,
-.title__wrap h2 {
-  color: var(--color-black);
-  text-align: center;
-  margin: 0;
-}
-
-.title__wrap h1 {
-  font-family: 'Oswald', sans-serif;
-  font-size: 34px;
-  font-weight: 700;
-  letter-spacing: -0.68px;
-  line-height: 1;
-  text-transform: uppercase;
-}
-
-.title__wrap h2 {
-  font-size: 14px;
-  font-weight: 600;
-}
-
 .card {
   position: relative;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
   width: calc(100% - 30px);
-  background-color: #e2ebf4;
+  /* background-color: rgba(255, 255, 255, 0.7); */
+  background-color: #dedbd4;
   border-radius: 8px;
   box-shadow: 0px 2px 8px 0px var(--border-color);
   cursor: pointer;
@@ -61,6 +20,7 @@
   height: 100%;
   border-radius: 8px;
   border: 1.5px solid rgba(255, 255, 255, 0.4);
+  pointer-events: none;
 }
 
 .card__img {
@@ -72,7 +32,6 @@
   position: relative;
   width: 100%;
   aspect-ratio: 1 / 1;
-  background-color: var(--color-light-gray);
   border-radius: 8px 8px 0 0;
   margin: 0;
   overflow: hidden;
@@ -85,8 +44,6 @@
   transform: translate(-50%, -50%);
   height: 100%;
   object-fit: contain;
-  content: url('../assets/thumbnail1.jpg');
-  background-color: var(--color-light-gray);
   margin: 0;
 }
 
@@ -108,7 +65,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   height: 100%;
-  content: url('../assets/thumbnail1.jpg');
   -webkit-mask-image: linear-gradient(180deg, transparent 0%, var(--color-black) 50%, transparent 100%);
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-size: 100% 100%;
