--- a/src/styles/common/common.css
+++ b/src/styles/common/common.css
@@ -24,17 +24,24 @@ body {
   margin: 0 auto;
 }
 
+ul {
+  list-style: none;
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
+}
+
+button {
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+}
+
 a {
   text-decoration: none;
 }
 
 p {
-  margin: 0;
-}
-
-ul {
-  list-style: none;
-  text-decoration: none;
-  padding: 0;
   margin: 0;
 }
