--- a/src/styles/Category.module.css
+++ b/src/styles/Category.module.css
@@ -44,7 +44,7 @@ nav {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(29deg) brightness(102%) contrast(105%);
 }
 
-.item a {
+.item {
   display: flex;
   justify-content: flex-start;
   align-items: center;
