feat: 코어 개발, context api 수정

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -21,6 +21,7 @@
   height: 100%;
   object-fit: cover;
   border-radius: 8px 8px 0 0;
+  background-color: var(--color-light-gray);
 }
 
 .card__title {
@@ -42,6 +43,7 @@
   height: 16px;
   object-fit: contain;
   border-radius: 100%;
+  background-color: var(--color-light-gray);
 }
 
 .cp p {
