feat: 스켈레톤 UI 추가, 콘텐츠 상세 퍼블리싱

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -12,7 +12,6 @@
 .thumbnail {
   width: 100%;
   aspect-ratio: 4/3;
-  margin: 0;
 }
 
 .thumbnail img {
@@ -77,6 +76,16 @@
   padding: 8px 14px;
 }
 
+.card__more img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+  object-fit: contain;
+  padding: 2px;
+}
+
 .date {
   display: flex;
   align-items: center;
@@ -88,16 +97,6 @@
   align-items: center;
   justify-content: flex-end;
   gap: 6px;
-}
-
-.like img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 20px;
-  height: 20px;
-  object-fit: contain;
-  padding: 2px;
 }
 
 .view {
