--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,4 @@
-@import url('./common/common.css');
-
-header {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -9,36 +7,35 @@ header {
   margin: 0 15px;
 }
 
-header .logo {
+.header .logo {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
-header .logo h1,
-header .logo h2 {
+.header .logo h1,
+.header .logo h2 {
   color: var(--color-black);
   font-size: 24px;
   font-weight: 900;
   line-height: 1;
-  margin: 0;
 }
 
-header .logo h1 {
+.header .logo h1 {
   cursor: pointer;
 }
 
-header .logo h2 {
+.header .logo h2 {
   color: var(--color-dark-gray);
 }
 
-header .menu {
+.header .menu {
   display: flex;
   align-items: center;
   gap: 10px;
 }
 
-header .menu .icon {
+.header .menu .icon {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,93 +44,6 @@ header .menu .icon {
   cursor: pointer;
 }
 
-header .menu .icon img {
+.header .menu .icon img {
   object-fit: contain;
-}
-
-.content__wrap {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  background: linear-gradient(180deg, var(--color-white) 0%, var(--background-color) 100%);
-  /* padding: 36px 15px 25px 15px; */
-  padding: 36px 15px;
-}
-
-.content__title {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  align-self: stretch;
-}
-
-.title {
-  font-family: 'Oswald', 'Pretendard', sans-serif;
-  font-size: 28px;
-  /* font-weight: 700; */
-  font-weight: 800;
-  line-height: 0.9;
-  letter-spacing: -0.56px;
-  text-transform: uppercase;
-  margin: 0;
-}
-
-.editor__wrap {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 24px;
-  background: linear-gradient(180deg, #dedbd4 0%, #948777 100%);
-  padding: 36px 0;
-  z-index: 1;
-}
-
-.editor__title {
-  position: sticky;
-  top: 92px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 12px;
-  line-height: 1;
-  z-index: -1;
-}
-
-.editor__title h1,
-.editor__title h2 {
-  color: var(--color-black);
-  text-align: center;
-  margin: 0;
-}
-
-.editor__title h1 {
-  font-family: 'Oswald', sans-serif;
-  font-size: 34px;
-  font-weight: 700;
-  letter-spacing: -0.68px;
-  line-height: 1;
-  text-transform: uppercase;
-}
-
-.editor__title h2 {
-  font-size: 14px;
-  font-weight: 600;
-}
-
-.btn__more {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  gap: 4px;
-  padding: 8px;
-  margin: 0 -8px -8px 0;
-}
-
-.btn__more p {
-  color: var(--color-black);
-  text-align: right;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 0.9;
 }
