--- a/src/styles/common/common.css
+++ b/src/styles/common/common.css
@@ -24,6 +24,11 @@ body {
   margin: 0 auto;
 }
 
+figure {
+  padding: 0;
+  margin: 0;
+}
+
 ul {
   list-style: none;
   text-decoration: none;
@@ -42,6 +47,9 @@ a {
   text-decoration: none;
 }
 
+h1,
+h2,
 p {
+  padding: 0;
   margin: 0;
 }
