--- a/src/styles/CardM.module.css
+++ b/src/styles/CardM.module.css
@@ -8,3 +8,12 @@
   box-shadow: 0px 2px 8px 0px var(--border-color);
   cursor: pointer;
 }
+
+.card__title {
+  flex: 1 0 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border-bottom: 1px solid var(--border-color);
+  padding: 10px 14px 24px;
+}
