--- a/src/styles/ContentDetail.module.css
+++ b/src/styles/ContentDetail.module.css
@@ -1,15 +1,19 @@
 .header {
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: aliceblue;
-  padding: 12px 17px 8px;
+  background: rgba(255, 255, 255, 0.85);
+  backdrop-filter: blur(25px);
+  padding: 12px 17px 8px 17px;
+  z-index: 10;
 }
 
 .header h1 {
+  text-align: center;
   font-size: 20px;
-  font-weight: 900;
-  line-height: 1;
+  font-weight: 800;
   cursor: pointer;
 }
 
@@ -19,35 +23,42 @@
 }
 
 .icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 26px;
   height: 26px;
   border-radius: 100%;
-  background-color: lavender;
+  background-color: var(--color-light-gray);
   cursor: pointer;
 }
 
+.icon:active {
+  opacity: 0.5;
+}
+
 .content__wrap {
-  padding: 24px;
+  padding: 20px 24px 84px 24px;
 }
 
 .title {
   font-size: 24px;
-  font-weight: 900;
-  line-height: 1;
-  margin-bottom: 18px;
+  font-weight: 800;
+  margin-bottom: 14px;
 }
 
 .editor {
   font-size: 16px;
   font-weight: 600;
   font-style: italic;
-  line-height: 1;
-  margin-bottom: 4px;
+  line-height: 0.8;
+  margin-bottom: 8px;
 }
 
 .date {
-  font-size: 14px;
   color: rgba(0, 0, 0, 0.68);
+  font-size: 14px;
+  line-height: 0.8;
 }
 
 .content {
@@ -70,21 +81,37 @@
 }
 
 .content__more {
-  padding: 0 14px;
+  padding: 56px 14px 0px 14px;
 }
 
 .more {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 8px;
   width: 100%;
   height: 45px;
-  border: 2px solid var(--color-black);
+  border: 1.5px solid var(--color-black);
   border-radius: 12px;
   cursor: pointer;
 }
 
 .more span {
   font-size: 14px;
+  font-weight: 600;
+  color: var(--color-black);
+}
+
+.category__wrap {
+  display: flex;
+  flex-direction: column;
+  padding: 14px 15px 36px 15px;
+}
+
+.category__wrap > p {
+  color: rgba(0, 0, 0, 0.3);
+  font-size: 14px;
   font-weight: 700;
+  line-height: 0.8;
+  margin-bottom: 8px;
 }
