--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -39,11 +39,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 24px;
-  height: 24px;
+  padding: 2px;
   cursor: pointer;
 }
 
-.header .menu .icon img {
-  object-fit: contain;
+.nav {
+  position: sticky;
+  top: 0;
+  /* min-height: 56px; */
+  background: rgba(255, 255, 255, 0.85);
+  backdrop-filter: blur(25px);
+  z-index: 10;
+}
+
+.content__wrap {
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(180deg, var(--color-white) 0%, var(--background-color) 100%);
+  /* padding: 36px 15px 25px 15px; */
+  padding: 36px 15px;
 }
