feat: 카테고리 상세 퍼블리싱

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -94,13 +94,10 @@
 
 .like {
   display: flex;
-  align-items: center;
   justify-content: flex-end;
-  gap: 8px;
+  align-items: center;
 }
 
-.view {
-  display: flex;
-  align-items: center;
-  gap: 4px;
+.like p {
+  margin: 0 8px 0 4px;
 }
