feat: 메뉴 퍼블리싱 및 기능구현, 절대경로로 수정

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -52,6 +52,23 @@
   z-index: 10;
 }
 
+.nav__ad {
+  padding: 0 15px 4px 15px;
+}
+
+.ad__item {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 8px;
+  cursor: pointer;
+}
+
+.ad__item p {
+  font-size: 18px;
+  font-weight: 800;
+}
+
 .content__wrap {
   display: flex;
   flex-direction: column;
