--- a/src/styles/ContentDetail.module.css
+++ b/src/styles/ContentDetail.module.css
@@ -112,6 +112,7 @@
   color: rgba(0, 0, 0, 0.3);
   font-size: 14px;
   font-weight: 700;
+  text-transform: uppercase;
   line-height: 0.8;
   margin-bottom: 8px;
 }
