--- a/src/styles/MenuModal.module.css
+++ b/src/styles/MenuModal.module.css
@@ -1,20 +1,23 @@
 .modal__wrap {
-  border: 3px solid red;
   width: 40%;
   position: absolute;
-  top: 80%;
+  top: 1%;
   right: 5%;
-  background-color: #ffffff;
-  color: #000;
-  backdrop-filter: blur(1em);
+  text-align: center;
+  color: var(--color-black);
   border-radius: 15px;
+  background: rgba(255, 255, 255, 0.85);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  z-index: 10;
+  box-shadow: -1px 6px 5px 0px #0000001f;
 }
 
-.menu__list {
+.modal__wrap ul li {
   border-bottom: 1px solid #bcbbb9;
   padding: 8px 0;
 }
 
-.menu__list:last-child {
+.modal__wrap ul li:last-child {
   border-bottom: 0;
 }
