feat: 더 보기 모달 기능 구현

--- a/src/styles/MenuModal.module.css
+++ b/src/styles/MenuModal.module.css
@@ -1,7 +1,7 @@
 .modal__wrap {
   width: 40%;
-  position: absolute;
-  top: 1%;
+  position: fixed;
+  top: 5%;
   right: 5%;
   text-align: center;
   color: var(--color-black);
