--- a/src/styles/ContentDetail.module.css
+++ b/src/styles/ContentDetail.module.css
@@ -15,6 +15,7 @@
   font-size: 20px;
   font-weight: 800;
   cursor: pointer;
+  padding: 0 8px;
 }
 
 .header__btn {
@@ -90,16 +91,26 @@
   align-items: center;
   gap: 8px;
   width: 100%;
-  height: 45px;
-  border: 1.5px solid var(--color-black);
-  border-radius: 12px;
-  cursor: pointer;
-}
-
-.more span {
+  max-height: 45px;
   font-size: 14px;
   font-weight: 600;
   color: var(--color-black);
+  border: 1.5px solid var(--color-black);
+  border-radius: 12px;
+  cursor: pointer;
+  padding: 15px;
+}
+
+.more span {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  white-space: normal;
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--color-black);
+  overflow: hidden;
 }
 
 .category__wrap {
