--- a/src/styles/Contents.module.css
+++ b/src/styles/Contents.module.css
@@ -11,6 +11,9 @@
 }
 
 .header h1 {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   text-align: center;
   font-size: 20px;
   font-weight: 800;
@@ -35,7 +38,6 @@
 .content__wrap {
   display: flex;
   flex-direction: column;
-  background: linear-gradient(180deg, var(--color-white) 0%, var(--background-color) 100%);
   padding: 8px 15px 36px 15px;
 }
 
