--- a/src/styles/LikeContents.module.css
+++ b/src/styles/LikeContents.module.css
@@ -11,6 +11,9 @@
 }
 
 .header h1 {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   text-align: center;
   font-size: 20px;
   font-weight: 800;
