--- a/src/styles/MoreMenu.module.css
+++ b/src/styles/MoreMenu.module.css
@@ -1,8 +1,8 @@
 .modal__wrap {
-  width: 30%;
   position: fixed;
+  left: 0;
   top: 50px;
-  right: 0%;
+  width: 100%;
   text-align: center;
   color: var(--color-black);
   border-radius: 15px;
