--- a/src/styles/Contents.module.css
+++ b/src/styles/Contents.module.css
@@ -6,7 +6,8 @@
   align-items: center;
   background: rgba(255, 255, 255, 0.85);
   backdrop-filter: blur(25px);
-  padding: 12px 17px 8px 17px;
+  /* padding: 12px 17px 8px 17px; */
+  padding: 24px 15px 12px 15px;
   z-index: 10;
 }
 
@@ -18,6 +19,11 @@
   font-size: 20px;
   font-weight: 800;
   cursor: pointer;
+}
+
+.header button {
+  display: flex;
+  padding: 2px;
 }
 
 .icon {
