--- a/src/styles/MoreMenu.module.css
+++ b/src/styles/MoreMenu.module.css
@@ -1,8 +1,12 @@
 .modal__wrap {
   position: fixed;
-  left: 0;
+  /* left: 0; */
+  left: calc(50% + 200px);
   top: 50px;
-  width: 100%;
+  transform: translateX(-50%);
+  min-width: 100px;
+  /* width: 100%; */
+  width: auto;
   text-align: center;
   color: var(--color-black);
   border-radius: 15px;
@@ -20,4 +24,22 @@
 
 .modal__wrap ul li:last-child {
   border-bottom: 0;
+}
+
+@media screen and (max-width: 768px) and (min-width: 400px) {
+  .modal__wrap {
+    left: calc(50% + 135px);
+  }
+}
+
+@media screen and (max-width: 400px) and (min-width: 280px) {
+  .modal__wrap {
+    left: calc(35% + 135px);
+  }
+}
+
+@media screen and (max-width: 280px) {
+  .modal__wrap {
+    left: calc(25% + 135px);
+  }
 }
