feat: 비즈니스 로직 분리

--- a/src/styles/Category.module.css
+++ b/src/styles/Category.module.css
@@ -21,6 +21,13 @@
   cursor: pointer;
 }
 
+.item__skeleton {
+  flex: 0 0 auto;
+  padding: 12px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
 .item:active,
 .item.active {
   background-color: var(--color-black);
