--- a/src/styles/CategoryStories.module.css
+++ b/src/styles/CategoryStories.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   background: rgba(255, 255, 255, 0.85);
   backdrop-filter: blur(25px);
-  padding: 12px 17px 8px 17px;
+  padding: 15px 15px 8px 15px;
   z-index: 10;
 }
 
@@ -18,13 +18,11 @@
   font-size: 20px;
   font-weight: 800;
   cursor: pointer;
-  flex: 1;
 }
 
-.header p {
-  color: var(--color-red);
-  font-size: 14px;
-  cursor: pointer;
+.header button {
+  display: flex;
+  padding: 2px;
 }
 
 .icon {
