--- a/src/styles/HistoryStories.module.css
+++ b/src/styles/HistoryStories.module.css
@@ -6,8 +6,7 @@
   align-items: center;
   background: rgba(255, 255, 255, 0.85);
   backdrop-filter: blur(25px);
-  /* padding: 12px 17px 8px 17px; */
-  padding: 24px 15px 12px 15px;
+  padding: 15px 17px 8px 17px;
   z-index: 10;
 }
 
@@ -19,11 +18,13 @@
   font-size: 20px;
   font-weight: 800;
   cursor: pointer;
+  flex: 1;
 }
 
-.header button {
-  display: flex;
-  padding: 2px;
+.header p {
+  color: var(--color-red);
+  font-size: 14px;
+  cursor: pointer;
 }
 
 .icon {
