--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: flex-start;
   border-bottom: 1px solid var(--border-color);
-  padding: 24px 0 15px 0;
+  padding: 15px 0 12px;
   margin: 0 15px;
 }
 
