--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -17,7 +17,7 @@
   justify-content: space-between;
   align-items: flex-start;
   border-bottom: 1px solid var(--border-color);
-  padding: 24px 0 15px;
+  padding: 15px 0;
 }
 
 .header h1 {
