feat: 외주 아이콘 변경, 더보기 메뉴 수정

--- a/src/styles/HistoryStories.module.css
+++ b/src/styles/HistoryStories.module.css
@@ -21,6 +21,11 @@
   flex: 1;
 }
 
+.header button {
+  display: flex;
+  padding: 2px;
+}
+
 .header p {
   color: var(--color-red);
   font-size: 14px;
