feat: 콘텐츠 상세 api 연결 및 테스트

--- a/src/styles/Story.module.css
+++ b/src/styles/Story.module.css
@@ -42,6 +42,7 @@
 
 .content__wrap {
   padding: 20px 24px 84px 24px;
+  overflow: hidden;
 }
 
 .title {
@@ -70,6 +71,10 @@
   gap: 20px;
   width: 100%;
   margin: 20px 0;
+}
+
+.content iframe {
+  width: 100%;
 }
 
 .content img {
