--- a/src/styles/ShareModal.module.css
+++ b/src/styles/ShareModal.module.css
@@ -8,3 +8,32 @@
   z-index: 999;
   background-color: rgba(0, 0, 0, 0.85);
 }
+
+.icon {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+}
+.sns__wrap {
+  position: absolute;
+  left: 50%;
+  top: 11%;
+  color: #fff;
+  transform: translate(-50%, -50%);
+}
+.sns__wrap .title {
+  font-size: 19px;
+  text-align: center;
+}
+.sns__wrap ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.sns__wrap ul li img {
+  width: 50px;
+  height: 50px;
+}
