--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -119,11 +119,26 @@
   border-radius: 4px;
   border: 1px solid var(--color-white);
   background-color: var(--color-black);
-  padding: 5px;
+  padding: 4px;
+}
+
+.drop__item.channel figure {
+  border: 1px solid var(--color-white);
+  background-color: var(--color-white);
 }
 
 .drop__item img {
+  width: 100%;
+  height: 100%;
   filter: invert(94%) sepia(100%) saturate(0%) hue-rotate(166deg) brightness(102%) contrast(102%);
+}
+
+.drop__item.channel img {
+  filter: none;
+}
+
+.drop__item.channel img {
+  filter: none;
 }
 
 .drop__item p {
