--- a/src/styles/Story.css
+++ b/src/styles/Story.css
@@ -1,16 +1,24 @@
 .iframe-container {
-  height: 0;
-  padding-bottom: 56.25%;
   position: relative;
   width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
 }
 
 .iframe-container iframe {
-  height: 100%;
-  left: 0;
   position: absolute;
   top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
+}
+
+.fr-img-caption .fr-inner {
+  display: block;
+  font-size: 14px;
+  text-align: center;
+  padding: 5px 5px 10px;
+  opacity: 0.9;
 }
 
 img.fr-dib {
@@ -22,22 +30,24 @@ span.fr-img-caption.fr-dib {
   margin: 5px auto;
 }
 
+/* 컨텐츠 안에 이모지 크기 맞추기 */
 span.fr-emoticon.fr-emoticon-img {
   display: inline-block;
   font-size: inherit;
-  height: 1em;
-  line-height: 1;
-  margin: -0.1em 0.1em 0.1em;
-  min-height: 20px;
-  min-width: 20px;
-  vertical-align: middle;
   width: 1em;
+  height: 1em;
+  min-width: 20px;
+  min-height: 20px;
+  margin: -0.1em 0.1em 0.1em;
+  line-height: 1;
+  vertical-align: middle;
 }
 
+/* 컨텐츠 안에 이미지 캡션 */
 .fr-img-wrap {
-  align-items: center;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .fr-img-caption {
@@ -46,11 +56,11 @@ span.fr-emoticon.fr-emoticon-img {
 
 .fr-img-caption .fr-inner {
   display: block;
-  font-size: 14px;
   max-width: 300px;
+  font-size: 14px;
+  text-align: center;
   opacity: 0.9;
   padding: 5px 5px 10px;
-  text-align: center;
 }
 
 .fr-img-caption .fr-inner * {
