--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -11,13 +11,15 @@
 
 .thumbnail {
   width: 100%;
-  aspect-ratio: 4/3;
+  height: auto;
+  /* aspect-ratio: 4/3; */
 }
 
 .thumbnail img {
   display: flex;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  aspect-ratio: 4/3;
   object-fit: cover;
   border-radius: 8px 8px 0 0;
   background-color: var(--color-light-gray);
