fix: 함수형 컴포넌트 변경, 이미지 레이지 로드 적용

--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -13,11 +13,15 @@
 }
 
 .header {
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   border-bottom: 1px solid var(--border-color);
+  background-color: var(--color-white);
   padding: 15px 0;
+  z-index: 1;
 }
 
 .header h1 {
@@ -35,7 +39,7 @@
   display: flex;
   flex-direction: column;
   gap: 14px;
-  min-height: calc(100vh - 173px);
+  min-height: calc(100vh - 188px);
   padding: 20px 0;
 }
 
