--- a/src/styles/Category.module.css
+++ b/src/styles/Category.module.css
@@ -1,65 +1,53 @@
-.list {
+.header {
+  position: sticky;
+  top: 0;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  gap: 8px;
-  list-style: none;
-  text-decoration: none;
-  padding: 8px 15px;
-  margin: 0;
-  overflow-x: auto;
+  background: rgba(255, 255, 255, 0.85);
+  backdrop-filter: blur(25px);
+  padding: 15px 15px 8px 15px;
+  z-index: 10;
 }
 
-.list::-webkit-scrollbar {
-  display: none;
-}
-
-.item {
-  flex: 0 0 auto;
-  padding: 12px;
-  background-color: var(--background-color);
-  border-radius: 8px;
+.header h1 {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  font-size: 20px;
+  font-weight: 800;
   cursor: pointer;
 }
 
-.item__skeleton {
-  flex: 0 0 auto;
-  padding: 12px;
-  border-radius: 8px;
-  cursor: pointer;
-}
-
-.item:active,
-.item.active {
-  background-color: var(--color-black);
-}
-
-.item:active p,
-.item.active p {
-  color: var(--color-white);
-}
-
-.item:active img,
-.item.active img {
-  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(29deg) brightness(102%) contrast(105%);
-}
-
-.item {
+.header button {
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 14px;
+  padding: 2px;
 }
 
-.item p {
-  color: var(--color-black);
-  font-size: 12px;
-  font-weight: 700;
-}
-
-.item img {
+.icon {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 16px;
-  object-fit: contain;
+  width: 26px;
+  height: 26px;
+  border-radius: 100%;
+  background-color: var(--color-light-gray);
+  cursor: pointer;
+}
+
+.icon:active {
+  opacity: 0.5;
+}
+
+.content__wrap {
+  display: flex;
+  flex-direction: column;
+  padding: 8px 15px 36px 15px;
+}
+
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
 }
