--- a/src/styles/PolicyPrivacy.module.css
+++ b/src/styles/PolicyPrivacy.module.css
@@ -1,9 +1,14 @@
+.icon {
+  position: absolute;
+  right: 0;
+}
+
 .contents__wrap {
-  padding: 0 15px 15px;
+  padding: 15px;
 }
 
 .contents__wrap h2 {
-  padding: 10px 0px;
+  padding: 20px 0px 10px;
   text-align: center;
   font-weight: 500;
 }
