--- a/src/styles/ShareModal.module.css
+++ b/src/styles/ShareModal.module.css
@@ -13,6 +13,7 @@
   position: absolute;
   right: 20px;
   top: 20px;
+  cursor: pointer;
 }
 .sns__wrap {
   position: absolute;
@@ -36,4 +37,5 @@
 .sns__wrap ul li img {
   width: 50px;
   height: 50px;
+  cursor: pointer;
 }
