feat: 공감한 콘텐츠 삭제 기능 구현, No Stories 표시, API validation 추가

--- a/src/styles/MoreMenu.module.css
+++ b/src/styles/MoreMenu.module.css
@@ -20,6 +20,7 @@
   align-items: center;
   border-bottom: 1px solid var(--border-color);
   padding: 8px 15px 8px 30px;
+  cursor: pointer;
 }
 
 .modal__wrap ul li:last-child {
