fix: 메뉴 높이 스타일 수정

--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -7,8 +7,9 @@
   width: 100%;
   min-width: 280px;
   max-width: 540px;
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
+  /* min-height: 100vh;
+  min-height: -webkit-fill-available; */
+  min-height: calc(var(--vh, 1vh) * 100);
   background-color: var(--color-white);
   padding: 0 15px;
   margin: auto;
