--- a/src/styles/Category.module.css
+++ b/src/styles/Category.module.css
@@ -17,12 +17,13 @@
   text-align: center;
   font-size: 20px;
   font-weight: 800;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 .header button {
   display: flex;
   padding: 2px;
+  cursor: pointer;
 }
 
 .icon {
