--- a/src/styles/CategoryNav.module.css
+++ b/src/styles/CategoryNav.module.css
@@ -1,29 +1,30 @@
-.list {
+.list__skeleton {
   display: flex;
   align-items: center;
   gap: 8px;
-  list-style: none;
-  text-decoration: none;
   padding: 8px 15px;
   margin: 0;
-  overflow-x: auto;
 }
 
-.list::-webkit-scrollbar {
-  display: none;
-}
-
-.item {
-  flex: 0 0 auto;
-  padding: 12px;
-  background-color: var(--background-color);
-  border-radius: 8px;
-  cursor: pointer;
+.list {
+  padding: 8px 15px !important;
 }
 
 .item__skeleton {
   flex: 0 0 auto;
   padding: 12px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.item {
+  display: flex !important;
+  width: auto !important;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 14px;
+  padding: 12px;
+  background-color: var(--background-color);
   border-radius: 8px;
   cursor: pointer;
 }
@@ -41,13 +42,6 @@
 .item:active img,
 .item.active img {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(29deg) brightness(102%) contrast(105%);
-}
-
-.item {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 14px;
 }
 
 .item p {
