--- a/src/styles/EditorsPick.module.css
+++ b/src/styles/EditorsPick.module.css
@@ -4,9 +4,19 @@
   flex-direction: column;
   align-items: center;
   gap: 24px;
-  background: linear-gradient(180deg, #dedbd4 0%, #948777 100%);
+  /* background: linear-gradient(180deg, #dedbd4 0%, #948777 100%); */
   padding: 36px 0;
   z-index: 1;
+}
+
+.content__wrap::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+  z-index: -2;
 }
 
 .content__title {
@@ -46,12 +56,22 @@
   flex-direction: column;
   flex-shrink: 0;
   width: calc(100% - 30px);
-  /* background-color: rgba(255, 255, 255, 0.7); */
-  background-color: #dedbd4;
+  background-color: var(--color-white);
   border-radius: 8px;
   box-shadow: 0px 2px 8px 0px var(--border-color);
   cursor: pointer;
   z-index: 1;
+}
+
+.card::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  background-color: rgba(216.79322033898302, 188.32542372881355, 160.60677966101696, 0.5);
+  z-index: -10;
 }
 
 .card::after {
@@ -72,7 +92,6 @@
 
 .thumbnail {
   position: relative;
-  width: 100%;
   aspect-ratio: 1 / 1;
   border-radius: 8px 8px 0 0;
   margin: 0;
@@ -84,8 +103,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
   height: 100%;
-  object-fit: contain;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
   background-color: var(--color-light-gray);
   margin: 0;
 }
@@ -107,7 +128,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
   height: 100%;
+  object-fit: cover;
   -webkit-mask-image: linear-gradient(180deg, transparent 0%, var(--color-black) 50%, transparent 100%);
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-size: 100% 100%;
