--- a/src/styles/TypeC.module.css
+++ b/src/styles/TypeC.module.css
@@ -19,14 +19,15 @@
 
 .thumbnail {
   width: 36%;
-  aspect-ratio: 1 / 1;
+  /* aspect-ratio: 1 / 1; */
   margin: 0;
 }
 
 .thumbnail img {
   display: flex;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  aspect-ratio: 1 / 1;
   object-fit: cover;
   border-radius: 4px;
 }
