--- a/src/styles/EditorsPick.module.css
+++ b/src/styles/EditorsPick.module.css
@@ -4,19 +4,8 @@
   flex-direction: column;
   align-items: center;
   gap: 24px;
-  /* background: linear-gradient(180deg, #dedbd4 0%, #948777 100%); */
   padding: 36px 0;
   z-index: 1;
-}
-
-.content__wrap::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
-  z-index: -2;
 }
 
 .content__title {
@@ -63,15 +52,12 @@
   z-index: 1;
 }
 
-.card::before {
-  content: '';
+.card__background {
   position: absolute;
-  display: block;
   width: 100%;
   height: 100%;
   border-radius: 8px;
-  background-color: rgba(216.79322033898302, 188.32542372881355, 160.60677966101696, 0.5);
-  z-index: -5;
+  z-index: -10;
 }
 
 .card::after {
