feat: 홈 화면 무한 스크롤 기능 수정 및 React.memo 추가

--- a/src/styles/History.module.css
+++ b/src/styles/History.module.css
@@ -41,10 +41,10 @@
   border-radius: 100%;
   background-color: var(--color-light-gray);
   cursor: pointer;
-}
 
-.icon:active {
-  opacity: 0.5;
+  &:active {
+    opacity: 0.5;
+  }
 }
 
 .content__wrap {
