--- a/src/styles/CategoryNav.module.css
+++ b/src/styles/CategoryNav.module.css
@@ -4,6 +4,7 @@
   gap: 8px;
   padding: 8px 15px;
   margin: 0;
+  overflow-x: hidden;
 }
 
 .list {
@@ -27,21 +28,21 @@
   background-color: var(--background-color);
   border-radius: 8px;
   cursor: pointer;
-}
 
-.item:active,
-.item.active {
-  background-color: var(--color-black);
-}
+  &:active,
+  &.active {
+    background-color: var(--color-black);
+  }
 
-.item:active p,
-.item.active p {
-  color: var(--color-white);
-}
+  &:active p,
+  &.active p {
+    color: var(--color-white);
+  }
 
-.item:active img,
-.item.active img {
-  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(29deg) brightness(102%) contrast(105%);
+  &:active img,
+  &.active img {
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(29deg) brightness(102%) contrast(105%);
+  }
 }
 
 .item p {
