feat: 광고 추가 및 수정, fetch 함수 수정

--- a/src/styles/Ad.module.css
+++ b/src/styles/Ad.module.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  text-align: center;
   background-color: transparent;
   z-index: 9;
 
@@ -17,4 +18,17 @@
   position: relative;
   left: 50%;
   transform: translateX(-50%);
+}
+
+.ad__below {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+  background-color: transparent;
+  margin-bottom: 20px;
+
+  &.hide {
+    display: none;
+  }
 }
