--- a/src/styles/Ad.module.css
+++ b/src/styles/Ad.module.css
@@ -20,6 +20,18 @@
   transform: translateX(-50%);
 }
 
+.ad__home {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+  background-color: transparent;
+
+  &.hide {
+    display: none;
+  }
+}
+
 .ad__below {
   display: flex;
   justify-content: center;
